# Lab6-Translator

./: CMakeLists.txt
include/: CMakeLists.txt  translator.h
test/: CMakeLists.txt  translator_tests.cpp
